# ardupilot

./: .gitignore  .gitmodules  README.md  Unsaved Document 6  Unsaved Document 7  Unsaved Document 8  core.txt  core2.txt  core3.txt  core4.txt  wscript
.github/workflows/: esp32_build.yml
ArduCopter/: GCS_Mavlink.cpp  Parameters.cpp
ArduPlane/: ArduPlane.cpp  GCS_Mavlink.cpp  Parameters.cpp  RC_Channel.cpp  is_flying.cpp  quadplane.cpp  servos.cpp  system.cpp
Rover/: Rover.cpp
Tools/AP_Bootloader/: board_types.txt
Tools/AP_Periph/: AP_Periph.cpp  AP_Periph.h  GCS_MAVLink.cpp  can.cpp  wscript
Tools/CPUInfo/: CPUInfo.cpp
Tools/ardupilotwaf/: boards.py  build_summary.py  cmake.py  esp32.py
Tools/debug/: esp32s3.configure.build.buzz.upload.sh  esp32s3.gdb.buzz.sh
Tools/scripts/: apj_tool.py  board_list.py  build_bootloaders.py  configure_all.py  esp32_archive_build.sh  esp32_create_apj.sh  esp32_get_idf.sh  esp32_set_version.sh  size_compare_branches.py
libraries/AP_AHRS/: AP_AHRS.cpp  AP_AHRS.h  AP_AHRS_DCM.cpp
libraries/AP_Airspeed/: Airspeed_Calibration.cpp
libraries/AP_Baro/: AP_Baro.cpp  AP_Baro.h
libraries/AP_BoardConfig/: AP_BoardConfig.cpp  AP_BoardConfig.h  board_drivers.cpp
libraries/AP_CheckFirmware/: AP_CheckFirmware.h
libraries/AP_Common/: AP_Common.h
libraries/AP_Compass/: AP_Compass.h  AP_Compass_AK09916.cpp  AP_Compass_Calibration.cpp  CompassCalibrator.cpp  Compass_learn.cpp
libraries/AP_ExternalAHRS/: AP_ExternalAHRS_LORD.cpp  AP_ExternalAHRS_VectorNav.cpp
libraries/AP_Filesystem/: AP_Filesystem.cpp  AP_Filesystem.h  AP_Filesystem_posix.cpp
libraries/AP_GPS/: AP_GPS.cpp  AP_GPS.h  AP_GPS_GSOF.cpp
libraries/AP_HAL/: AP_HAL_Boards.h  AP_HAL_Main.h  HAL.h  SIMState.cpp  SIMState.h  Util.h
libraries/AP_HAL_ChibiOS/: HAL_ChibiOS_Class.cpp  RCOutput.cpp
libraries/AP_HAL_ESP32/: AP_HAL_ESP32_Namespace.h  AP_HAL_ESP32_Private.h  AnalogIn.cpp  AnalogIn.h  CANIface.h  CanIface.cpp  DeviceBus.cpp  DeviceBus.h  EventSource.cpp  EventSource.h  GPIO.cpp  GPIO.h  HAL_ESP32_Class.cpp  HAL_ESP32_Class.h  HAL_ESP32_Namespace.h  I2CDevice.cpp  I2CDevice.h  RCInput.cpp  RCInput.h  RCOutput.cpp  Util.h  (+29 more)
libraries/AP_HAL_ESP32/targets/esp-idf/: CMakeLists.txt  sdkconfig  sdkconfig.defaults.xx  sdkconfig.old
(+84 files in other folders)
